--- a/inicial.html
+++ b/inicial.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" >
+<html lang="pt-br">
 
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -7,13 +7,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>LNKS</title>
+    <title>Inical</title>
 </head>
 
 <body>
     <div id="container">
         <div id="profile">
-            <img src="./lucas.jpg" alt="foto">
+            <img src="./img/lucas.jpg" alt="foto">
             <p><a href="https://www.instagram.com/luca.srodr1gu3s?igsh=MWJwZHZhY3E3bGQ2dA=="
                     target="_blank">@Iuca.srodr1gu3s</a> <ion-icon name="logo-instagram"></ion-icon></p>
         </div>
