add: icone twitter

--- a/inicial.html
+++ b/inicial.html
@@ -30,7 +30,7 @@
                 <a href="https://github.com/Trindadelucas0" target="_blank">GITHUB</a>
             </li>
             <li>
-                <a href="#" target="_blank">LINKEDIN</a>
+                <a href="https://x.com/trindadelucas84" target="_blank">TWITTER</a>
             </li>
             <li>
                 <a href="https://www.instagram.com/luca.srodr1gu3s?igsh=MWJwZHZhY3E3bGQ2dA=="
@@ -46,6 +46,9 @@
             </a>
             <a href="https://www.google.com.br/?hl=pt-BR" target="_blank">
                 <ion-icon name="logo-linkedin"></ion-icon>
+            </a>
+            <a href="https://x.com/trindadelucas84" target="_blank">
+                <ion-icon name="logo-twitter"></ion-icon>
             </a>
         </div>
     </div>
