--- a/inicial2.html
+++ b/inicial2.html
@@ -15,7 +15,7 @@
 <body>
     <div id="container">
         <div id="profile">
-            <img src="./img/lucas.jpg" alt="foto">
+            <img src="./img/A.jpg" alt="foto">
             <p><a href="https://www.instagram.com/luca.srodr1gu3s?igsh=MWJwZHZhY3E3bGQ2dA=="
                     target="_blank">@Iuca.srodr1gu3s</a> <ion-icon name="logo-instagram"></ion-icon></p>
         </div>
@@ -29,18 +29,22 @@
         </div>
         <ul>
             <li>
-                <a href="https://github.com/Trindadelucas0" target="_blank">GITHUB</a>
+                <a href="https://trindadelucas0.github.io/Previsao/previsao.html" target="_blank">PREVISÃO</a>
             </li>
             <li>
-                <a href="https://x.com/trindadelucas84" target="_blank">TWITTER</a>
+                <a href="https://trindadelucas0.github.io/conversor/" target="_blank">CONVERSOR  . BRL -> USD</a>
             </li>
             <li>
-                <a href="https://www.instagram.com/luca.srodr1gu3s?igsh=MWJwZHZhY3E3bGQ2dA=="
-                    target="_blank">INSTAGRAM</a>
+                <a href="https://trindadelucas0.github.io/Calculadora/"
+                    target="_blank">CALCULADORA</a>
             </li>
             <li>
-                <a href="inicial2.html"
-                    target="_blank">INUTILIDADE</a>
+                <a href="https://trindadelucas0.github.io/relogio/relogio%20dinamico/index.html"
+                    target="_blank">RELOGIO</a>
+            </li>
+            <li>
+                <a href="https://trindadelucas0.github.io/INICIAL/inicial.html"
+                    target="_blank">VOLTAR</a>
             </li>
         </ul>
         <div id="social-links">
