--- a/inicial2.html
+++ b/inicial2.html
@@ -15,7 +15,7 @@
 <body>
     <div id="container">
         <div id="profile">
-            <img src="./img/A.jpg" alt="foto">
+            <img src="./img/B.jpg" alt="foto">
             <p><a href="https://www.instagram.com/luca.srodr1gu3s?igsh=MWJwZHZhY3E3bGQ2dA=="
                     target="_blank">@Iuca.srodr1gu3s</a> <ion-icon name="logo-instagram"></ion-icon></p>
         </div>
