--- a/inicial2.html
+++ b/inicial2.html
@@ -29,6 +29,10 @@
         </div>
         <ul>
             <li>
+                <a href="https://trindadelucas0.github.io/lampada/"
+                    target="_blank">LÂMPADA</a>
+            </li>
+            <li>
                 <a href="https://trindadelucas0.github.io/Previsao/previsao.html" target="_blank">PREVISÃO</a>
             </li>
             <li>
